Change index.html file

--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" type="image/png" href="image/favicon.ico">
-		<title>20 tháng 10 </title>    
-        <link type="text/css" rel="stylesheet" href="./renxi/default.css">
-		<script type="text/javascript" src="./renxi/jquery.min.js"></script>
-		<script type="text/javascript" src="./renxi/jscex.min.js"></script>
-		<script type="text/javascript" src="./renxi/jscex-parser.js"></script>
-		<script type="text/javascript" src="./renxi/jscex-jit.js"></script>
-		<script type="text/javascript" src="./renxi/jscex-builderbase.min.js"></script>
-		<script type="text/javascript" src="./renxi/jscex-async.min.js"></script>
-		<script type="text/javascript" src="./renxi/jscex-async-powerpack.min.js"></script>
-		<script type="text/javascript" src="./renxi/functions.js" charset="utf-8"></script>
-        <script type="text/javascript" src="./renxi/love.js" charset="utf-8"></script>
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="icon" type="image/png" href="image/favicon.ico">
+    <title>20 tháng 10 74DCHT22</title>    
+    <link type="text/css" rel="stylesheet" href="./renxi/default.css">
+    <script type="text/javascript" src="./renxi/jquery.min.js"></script>
+    <script type="text/javascript" src="./renxi/jscex.min.js"></script>
+    <script type="text/javascript" src="./renxi/jscex-parser.js"></script>
+    <script type="text/javascript" src="./renxi/jscex-jit.js"></script>
+    <script type="text/javascript" src="./renxi/jscex-builderbase.min.js"></script>
+    <script type="text/javascript" src="./renxi/jscex-async.min.js"></script>
+    <script type="text/javascript" src="./renxi/jscex-async-powerpack.min.js"></script>
+    <script type="text/javascript" src="./renxi/functions.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./renxi/love.js" charset="utf-8"></script>
+    
+    <!-- Đoạn script kích hoạt âm thanh sau khi có sự tương tác -->
+    <script>
+    document.addEventListener("click", function() {
+        var audio = document.getElementById("myAudio");
+        audio.play();
+    });
+    </script>
 
 </head>
-    <body>
- 
-			<audio autoplay="autoplay" >
-					<source src="music/nhac.mp3" type="audio/mp3" />
-            </audio> 
+<body>
+
+    <!-- Thẻ audio phát nhạc tự động (có tương tác người dùng) -->
+    <audio id="myAudio" autoplay="autoplay">
+    <source src="music/I-Do-911.mp3" type="audio/mp3" />
+	</audio> 
 
           
 
