Sua doi lan cuoi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" type="image/png" href="image/favicon.ico">
-    <title>20 tháng 10 của TQB Confession</title>    
+    <title>20 tháng 10 của các nàng Confession</title>    
     <link type="text/css" rel="stylesheet" href="./renxi/default.css">
     <script type="text/javascript" src="./renxi/jquery.min.js"></script>
     <script type="text/javascript" src="./renxi/jscex.min.js"></script>
@@ -40,7 +40,7 @@
 			        <div id="code">
 			      <font color="#000" ><span class="say">Chúc mừng 20/10 đến Quyên, Hân, Ngọc, Bảo Anh, Linh, Vy và Cẩm Anh là những bông hoa rực rỡ của chúng ta!!</span><br>
 						<span class="say"> </span><br>
-						<span class="say">Dù là mới gặp hãy đã quen, nhưng anh đều cảm ơn vì có sự hiện diện của các em trong từng khoảnh khắc. Các em là một phần không thể thiếu, là nguồn cảm hứng và sức mạnh cho Cạc và confession.</span><br>
+						<span class="say">Dù là mới gặp hãy đã quen, nhưng anh đều cảm ơn vì có sự hiện diện của các em trong từng khoảnh khắc. Các em là một phần không thể thiếu, là nguồn cảm hứng và sức mạnh cho nhóm chúng taaaa.</span><br>
 						<span class="say">Ngày 20/10 này, anh chúc các em luôn tỏa sáng rạng rỡ, không chỉ trong học tập mà cả trong cuộc sống. Hãy mạnh mẽ, tự tin, và tiếp tục vững bước trên con đường mình đã chọn nháaaaa.</span><br>
 						<span class="say">Chúc các em ngày 20/10 thật vui vẻ và tràn đầy sự xinh đẹp cùng với nhiều yêu thương. Tuy rằng đây là lời chúc cuối ngày nhưng mà là lời chúc tới cả tập thể hehe </span><br>
                         <span class="say"><span class="space"><img width="100px" height="100px" src="image/tym.png" alt=""><br>
